<resources>
    <string name="app_name">JokeApp</string>
    <string name="button_text">Get Joke</string>
    <string name="no_joke_found">No joke found</string>
    <string name="first">Bob</string>
    <string name="last">The Chicken</string>
    <string name="get_joke">Get Joke</string>
    <string name="settings">Settings</string>
    <string name="joke_type_nerdy">nerdy</string>
    <string name="joke_type_explicit">explicit</string>
    <string name="joke_type_chuck">chuck norris</string>
    <string name="joke_type_bruce">bruce schneier</string>
    <string name="default_joke_type">nerdy</string>
    <string name="pick_joke_type">Pick a Joke Type</string>
</resources>
